# glbootstrap

./: .gitmodules  CMakeLists.txt  COPYING  Makefile  README.md  glbootstrap.sln  glbootstrap.vcxproj  glbootstrap.vcxproj.filters  premake4.lua
X11/: main_x11.c
inc/: ugl.h
src/: egl_glx.c  main_win32.c  main_x11.c  ugl_glx.c
