cmake_minimum_required (VERSION 2.6)
project (glbootstrap C)

list(APPEND GLBOOTSTRAP_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/inc)
#find_package(OpenGL REQUIRED)
#list(APPEND GLBOOTSTRAP_INCLUDE_DIRS  ${OPENGL_INCLUDE_DIR})
#list(APPEND GLBOOTSTRAP_LIBRARIES ${OPENGL_gl_LIBRARY})

add_subdirectory(eglproxy)
list(APPEND GLBOOTSTRAP_INCLUDE_DIRS  ${EGLPROXY_INCLUDE_DIR})
list(APPEND GLBOOTSTRAP_LIBRARIES eglproxy)

#Common header files
list(APPEND GLBOOTSTRAP_HEADERS ${PROJECT_SOURCE_DIR}/inc/config.h)
list(APPEND GLBOOTSTRAP_HEADERS ${PROJECT_SOURCE_DIR}/inc/GL/glcorearb.h)

#Build main target
if (UNIX)
    add_definitions(-DHAVE_CONFIG_H)
    find_package(X11 REQUIRED)
    list(APPEND GLBOOTSTRAP_INCLUDE_DIRS ${X11_X11_INCLUDE_PATH})
    list(APPEND GLBOOTSTRAP_LIBRARIES ${X11_X11_LIB})
    list(APPEND GLBOOTSTRAP_SOURCES ${PROJECT_SOURCE_DIR}/src/main_x11.c)
elseif(WIN32)
    list(APPEND GLBOOTSTRAP_SOURCES ${PROJECT_SOURCE_DIR}/src/main_win32.c)
endif(UNIX)

include_directories(${GLBOOTSTRAP_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} WIN32 ${GLBOOTSTRAP_SOURCES} ${GLBOOTSTRAP_HEADERS})
target_link_libraries(${PROJECT_NAME} ${GLBOOTSTRAP_LIBRARIES})
