project (GLBOOTSTRAP C)
cmake_minimum_required(VERSION 2.8.9)

set(GLBOOTSTRAP_VERSION_MAJOR "0")
set(GLBOOTSTRAP_VERSION_MINOR "1")
set(GLBOOTSTRAP_VERSION "${GLBOOTSTRAP_VERSION_MAJOR}.${GLBOOTSTRAP_VERSION_MINOR}")

option(BUILD_SHARED_LIBS "Build shared libraries" ON)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

list(APPEND GLBOOTSTRAP_HEADERS "inc/config.h")
list(APPEND GLBOOTSTRAP_HEADERS "inc/GL/glcorearb.h")
list(APPEND GLBOOTSTRAP_INCLUDE_DIRS "eglproxy/inc")
list(APPEND GLBOOTSTRAP_INCLUDE_DIRS "inc")

find_package(OpenGL REQUIRED)
list(APPEND GLBOOTSTRAP_INCLUDE_DIRS ${OPENGL_INCLUDE_DIR})
list(APPEND GLBOOTSTRAP_LIBRARIES ${OPENGL_gl_LIBRARY})

add_subdirectory("eglproxy")
list(APPEND GLBOOTSTRAP_LIBRARIES "eglproxy")

if (UNIX AND NOT APPLE)
    add_definitions(-DHAVE_CONFIG_H)
    find_package(X11 REQUIRED)
    list(APPEND GLBOOTSTRAP_INCLUDE_DIRS ${X11_X11_INCLUDE_PATH})
    list(APPEND GLBOOTSTRAP_LIBRARIES ${X11_X11_LIB})
    list(APPEND GLBOOTSTRAP_SOURCES "src/main_x11.c")
elseif(WIN32)
    add_definitions(-DUNICODE -D_UNICODE)
    list(APPEND GLBOOTSTRAP_SOURCES "src/main_win32.c")
endif()

include_directories(${GLBOOTSTRAP_INCLUDE_DIRS})
add_executable(glbootstrap WIN32 ${GLBOOTSTRAP_SOURCES} ${GLBOOTSTRAP_HEADERS})
target_link_libraries(glbootstrap ${GLBOOTSTRAP_LIBRARIES})
